# cc2emu

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
include/: adc.h  bus.h  controls.h  disk_drive.h  keyboard.h  machine.h  mc6821.h  nk_sdl.h  processor_6809.h  sam.h  settings.h  utils.h  video.h
include/icons/: joystick.xpm  joystick_kbd.xpm
src/: adc.c  bus.c  controls.c  disk_drive.c  keyboard.c  machine.c  main.c  mc6821.c  nk_sdl.c  processor_6809.c  processor_6809.h  sam.c  settings.c  utils.c  video.c
